test/visibility/only/innerModuleSharesName-topLevel-doubleUse.good
innerModuleSharesName-topLevel-doubleUse.chpl:2: error: symbol a is multiply defined
innerModuleSharesName-topLevel-doubleUse.chpl:5: note: also defined here
